--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "jszip": "^3.10.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
