--- a/package.json
+++ b/package.json
@@ -1,18 +1,65 @@
 {
-  "name": "nodal-perigee",
-  "version": "0.1.0",
+  "name": "hanogt-codev",
+  "version": "1.0.0",
+  "description": "Hanogt Codev - Online Code Editor",
   "private": true,
   "main": "electron/main.js",
+  "author": "HanStudios",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build",
     "lint": "eslint",
     "cf:build": "npx @opennextjs/cloudflare build",
     "cf:dev": "npx wrangler dev",
     "cf:deploy": "npx wrangler deploy",
     "electron-start": "npx electron .",
-    "dist": "cross-env ELECTRON_BUILD=true npm run build && npx electron ."
+    "electron-dev": "set ELECTRON_DEV=true && npx electron .",
+    "dist": "npm run export && electron-builder",
+    "dist:win": "npm run export && electron-builder --win",
+    "dist:linux": "npm run export && electron-builder --linux"
+  },
+  "build": {
+    "appId": "com.hanstudios.hanogt-codev",
+    "productName": "Hanogt Codev",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "electron/**/*",
+      "out/**/*",
+      "public/**/*"
+    ],
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "public/logo-dark.png"
+    },
+    "linux": {
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "public/logo-dark.png",
+      "category": "Development"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
   },
   "dependencies": {
     "@capacitor/android": "^8.0.0",
@@ -23,13 +70,13 @@
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "jszip": "^3.10.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -39,7 +86,7 @@
     "@types/react-dom": "^19",
     "cross-env": "^10.1.0",
     "electron": "^39.2.7",
-    "electron-builder": "^26.0.12",
+    "electron-builder": "^26.4.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
